2007-07-30  Christian Persch  <chpe@gnome.org>

	=== Release 2.19.6 ===

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/webkit/webkit-embed.cpp:

	can_go methods now work, WebKit was missing the implementations for
	those functions, it's fixed now so we can use can_go methods.
	Note that they are useless without the ge_location signal being
	emitted (dummy code included, commented).

	Part of Bug #461652.

2007-07-30  Xan Lopez  <xan@gnome.org>

	* embed/webkit/webkit-embed-persist.cpp:
	* embed/webkit/webkit-embed.cpp:

	Add returns where needed, remove unnecessary variables.

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/webkit/webkit-embed-single.cpp:
	* embed/webkit/webkit-embed.cpp:
	* embed/webkit/webkit-embed-find.h:
	* embed/webkit/webkit-embed-single.h:
	* embed/webkit/webkit-embed.h:
	* embed/webkit/webkit-embed-persist.cpp:
	* embed/webkit/webkit-embed-persist.h:
	* embed/webkit/webkit-embed-find.cpp:

	Rename Webkit to WebKit. Used sed -i 's/Webkit/WebKit/'. 
	Fixes bug #461689.

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/ephy-password-dialog.c:

	Fix some strict aliasing warnings. Patch by Cosimo Cecchi. 
	Bug #433173.

2007-07-29  Carlos Garcia Campos  <carlosgc@gnome.org>

	* lib/egg/egg-editable-toolbar.c: (egg_editable_toolbar_dispose):

	Fix memory leak.
	
2007-07-28  Xan Lopez  <xan@gnome.org>

	* embed/webkit/webkit-embed.cpp:

	Implement stop loading method, for some reason can_go
	methods will fail to link.
	
	* src/epiphany.override:

	Remove mozilla include.

2007-07-27  Xan Lopez  <xan@gnome.org>

	* Makefile.am:
	* configure.ac:
	* doc/reference/Makefile.am:
	* embed/Makefile.am:
	* embed/ephy-embed-factory.c: (ephy_embed_factory_new_object):
	* embed/ephy-embed-persist.c:
	* embed/ephy-embed-shell.c:
	* embed/ephy-embed.c:
	* embed/webkit/Makefile.am:
	* embed/webkit/webkit-embed-find.cpp:
	* embed/webkit/webkit-embed-find.h:
	* embed/webkit/webkit-embed-persist.cpp: