@@ -1,3 +1,11 @@
+2007-07-31  Xan Lopez  <xan@gnome.org>
+
+	* embed/mozilla/mozilla-embed-single.cpp:
+	* embed/webkit/webkit-embed-single.cpp:
+
+	Do not use #ifdef inside macros, ancient compilers
+	don't like it
+
 2007-07-30  Christian Persch  <chpe@gnome.org>
 
 	=== Release 2.19.6 ===
